@@ -4882,7 +4882,7 @@ typedef DWORD LCID;
 #define _SLIST_HEADER_
 
 #ifdef _WIN64
-    typedef struct DECLSPEC_ALIGN(16) _SLIST_ENTRY *PSLIST_ENTRY;
+    typedef struct _SLIST_ENTRY *PSLIST_ENTRY;
     typedef struct DECLSPEC_ALIGN(16) _SLIST_ENTRY {
       PSLIST_ENTRY Next;
     } SLIST_ENTRY;
